force-app/main/default/objects/StudentLessonAttendance__c/StudentLessonAttendance__c.object-meta.xml
<CustomObject>
    <label>Lesson Attendance</label>
    <nameField>
        <displayFormat>LAN-{0000}</displayFormat>
        <label>Lesson Attendance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lesson Attendances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>