force-app/main/default/objects/StudentLessonAttendance__c/fields/Course__c.field-meta.xml
<CustomField>
    <fullName>Course__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course</label>
    <referenceTo>Course__c</referenceTo>
    <relationshipLabel>Attending Students</relationshipLabel>
    <relationshipName>LessonAttendances</relationshipName>
    <type>Lookup</type>
</CustomField>