force-app/main/default/objects/StudentLessonAttendance__c/fields/DepartmentCourseGroupLesson__c.field-meta.xml
<CustomField>
    <fullName>DepartmentCourseGroupLesson__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Group Lesson</label>
    <referenceTo>DepartmentCourseGroupLesson__c</referenceTo>
    <relationshipLabel>Attendances</relationshipLabel>
    <relationshipName>LessonAttendances</relationshipName>
    <type>Lookup</type>
</CustomField>