force-app/main/default/objects/StudentLessonAttendance__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active Lesson Attendance</label>
    <type>Checkbox</type>
</CustomField>