force-app/main/default/objects/StudentLessonAttendance__c/fields/IsAttending__c.field-meta.xml
<CustomField>
    <fullName>IsAttending__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attending</label>
    <type>Checkbox</type>
</CustomField>