force-app/main/default/objects/StudentLessonAttendance__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Lesson__c</columns>
    <columns>Course__c</columns>
    <columns>Student__c</columns>
    <columns>StudentGroup__c</columns>
    <columns>IsAttending__c</columns>
    <columns>IsActive__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>